--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <!-- <b style="color:#008AD7; font-weight:normal">&#x25B6 </b> -->
-              Microsoft</span>
+              Microsoft Azure AI</span>
           </div>
 
           <div class="is-size-5 publication-authors">
