--- a/index.html
+++ b/index.html
@@ -381,6 +381,10 @@ modal reasoning and action.
 <section class="section" id="Acknowledgement">
   <div class="container is-max-desktop content">
     <h2 class="title">Acknowledgement</h2>
+    <p>We would like to express our gratitude to <a href="https://www.microsoft.com/en-us/research/people/jfgao/" style="font-weight:normal;">Jianfeng Gao</a> for his valuable suggestions, as well as to <a href="https://jwyang.github.io/" style="font-weight:normal;">Jianwei Yang</a> for generously providing the image editing tool utilizing the <a href="https://x-decoder-vl.github.io/" style="font-weight:normal;">X-Decoder</a> framework. 
+    </p>
+    <br>
+    <br>
     <p>
       This website is adapted from <a
       href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>, licensed under a <a rel="license"
