--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">MM-ReAct <img src="./static/images/icon.png" alt="MM-ReAct" width="50"/>:</h1>
-          <h2 class="title is-2 publication-title">Prompting ChatGPT for Multimodal Reasoning and Action </h2>
+          <h2 class="title is-2 publication-title" style="width: 110%; margin-left: -5%">Prompting ChatGPT for Multimodal Reasoning and Action </h2>
           <div class="is-size-5">
             <span class="author-block">
               <a href="https://zyang-ur.github.io/" style="color:#00A4EF;font-weight:normal;">Zhengyuan Yang<sup>*</sup></a>
