--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="" target="_blank" 
+                <a href="https://github.com/microsoft/MM-REACT" target="_blank" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -225,7 +225,7 @@
               </span>
               <!-- Demo Link. -->
               <span class="link-block">
-                <a href="" target="_blank" 
+                <a href="https://huggingface.co/spaces/microsoft-cognitive-service/mm-react" target="_blank" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
