--- a/index.html
+++ b/index.html
@@ -395,19 +395,19 @@
 </section> -->
 
 
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-@article{zou2022xdecoder,
-  author      = {Zou, Xueyan and Dou, Zi-Yi and Yang, Jianwei and Gan, Zhe and Li, Linjie and Li, Chunyuan and Dai, Xiyang and Wang, Jianfeng and Yuan, Lu and Peng, Nanyun and Wang, Lijuan and Lee, Yong Jae and Gao, Jianfeng},
-  title       = {Generalized Decoding for Pixel, Image and Language},
+@article{yang2023mmreact,
+  author      = {Zhengyuan Yang and Linjie Li and Jianfeng Wang and Kevin Lin and Ehsan Azarnasab and Faisal Ahmed and Zicheng Liu and Ce Liu and Michael Zeng and Lijuan Wang},
+  title       = {MM-REACT: Prompting ChatGPT for Multimodal Reasoning and Action},
   publisher   = {arXiv},
-  year        = {2022},
+  year        = {2023},
 }
 </code></pre>
   </div>
-</section> -->
+</section>
 
 <section class="section" id="Acknowledgement">
   <div class="container is-max-desktop content">
