--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>
 @article{yang2023mmreact,
-  author      = {Zhengyuan Yang and Linjie Li and Jianfeng Wang and Kevin Lin and Ehsan Azarnasab and Faisal Ahmed and Zicheng Liu and Ce Liu and Michael Zeng and Lijuan Wang},
+  author      = {Zhengyuan Yang* and Linjie Li* and Jianfeng Wang* and Kevin Lin* and Ehsan Azarnasab* and Faisal Ahmed* and Zicheng Liu and Ce Liu and Michael Zeng and Lijuan Wang^},
   title       = {MM-REACT: Prompting ChatGPT for Multimodal Reasoning and Action},
   publisher   = {arXiv},
   year        = {2023},
